// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FooterConfigDialog /> > highlights the active item in the preview 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Configure Footer                                                                                │
│                                                                                                  │
│  Select which items to display in the footer.                                                    │
│                                                                                                  │
│    [✓] workspace                                                                                 │
│     Current working directory                                                                    │
│    [✓] git-branch                                                                                │
│     Current git branch name (not shown when unavailable)                                         │
│    [✓] sandbox                                                                                   │
│     Sandbox type and trust indicator                                                             │
│    [✓] model-name                                                                                │
│     Current model identifier                                                                     │
│    [✓] quota                                                                                     │
│     Percentage of daily limit used (not shown when unavailable)                                  │
│    [ ] context-used                                                                              │
│     Percentage of context window used                                                            │
│    [ ] memory-usage                                                                              │
│     Memory used by the application                                                               │
│    [ ] session-id                                                                                │
│     Unique identifier for the current session                                                    │
│    [ ] hostname                                                                                  │
│     Current machine hostname                                                                     │
│    [ ] auth                                                                                      │
│     Current authentication info                                                                  │
│  > [✓] code-changes                                                                              │
│     Lines added/removed in the session (not shown when zero)                                     │
│    [ ] token-count                                                                               │
│     Total tokens used in the session (not shown when zero)                                       │
│    [✓] Show footer labels                                                                        │
│                                                                                                  │
│    Reset to default footer                                                                       │
│                                                                                                  │
│                                                                                                  │
│  Enter to select · ↑/↓ to navigate · ←/→ to reorder · Esc to close                               │
│                                                                                                  │
│  ┌────────────────────────────────────────────────────────────────────────────────────────────┐  │
│  │ Preview:                                                                                   │  │
│  │ workspace (/directory)     branch      sandbox     /model              quota        diff   │  │
│  │ ~/project/path             main        docker      gemini-2.5-pro      42% used     +12 -4 │  │
│  └────────────────────────────────────────────────────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<FooterConfigDialog /> > renders correctly with default settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Configure Footer                                                                                │
│                                                                                                  │
│  Select which items to display in the footer.                                                    │
│                                                                                                  │
│  > [✓] workspace                                                                                 │
│     Current working directory                                                                    │
│    [✓] git-branch                                                                                │
│     Current git branch name (not shown when unavailable)                                         │
│    [✓] sandbox                                                                                   │
│     Sandbox type and trust indicator                                                             │
│    [✓] model-name                                                                                │
│     Current model identifier                                                                     │
│    [✓] quota                                                                                     │
│     Percentage of daily limit used (not shown when unavailable)                                  │
│    [ ] context-used                                                                              │
│     Percentage of context window used                                                            │
│    [ ] memory-usage                                                                              │
│     Memory used by the application                                                               │
│    [ ] session-id                                                                                │
│     Unique identifier for the current session                                                    │
│    [ ] hostname                                                                                  │
│     Current machine hostname                                                                     │
│    [ ] auth                                                                                      │
│     Current authentication info                                                                  │
│    [ ] code-changes                                                                              │
│     Lines added/removed in the session (not shown when zero)                                     │
│    [ ] token-count                                                                               │
│     Total tokens used in the session (not shown when zero)                                       │
│    [✓] Show footer labels                                                                        │
│                                                                                                  │
│    Reset to default footer                                                                       │
│                                                                                                  │
│                                                                                                  │
│  Enter to select · ↑/↓ to navigate · ←/→ to reorder · Esc to close                               │
│                                                                                                  │
│  ┌────────────────────────────────────────────────────────────────────────────────────────────┐  │
│  │ Preview:                                                                                   │  │
│  │ workspace (/directory)        branch         sandbox        /model                quota    │  │
│  │ ~/project/path                main           docker         gemini-2.5-pro        42% used │  │
│  └────────────────────────────────────────────────────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<FooterConfigDialog /> > renders correctly with default settings 2`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Configure Footer                                                                                │
│                                                                                                  │
│  Select which items to display in the footer.                                                    │
│                                                                                                  │
│  > [✓] workspace                                                                                 │
│     Current working directory                                                                    │
│    [✓] git-branch                                                                                │
│     Current git branch name (not shown when unavailable)                                         │
│    [✓] sandbox                                                                                   │
│     Sandbox type and trust indicator                                                             │
│    [✓] model-name                                                                                │
│     Current model identifier                                                                     │
│    [✓] quota                                                                                     │
│     Percentage of daily limit used (not shown when unavailable)                                  │
│    [ ] context-used                                                                              │
│     Percentage of context window used                                                            │
│    [ ] memory-usage                                                                              │
│     Memory used by the application                                                               │
│    [ ] session-id                                                                                │
│     Unique identifier for the current session                                                    │
│    [ ] hostname                                                                                  │
│     Current machine hostname                                                                     │
│    [ ] auth                                                                                      │
│     Current authentication info                                                                  │
│    [ ] code-changes                                                                              │
│     Lines added/removed in the session (not shown when zero)                                     │
│    [ ] token-count                                                                               │
│     Total tokens used in the session (not shown when zero)                                       │
│    [✓] Show footer labels                                                                        │
│                                                                                                  │
│    Reset to default footer                                                                       │
│                                                                                                  │
│                                                                                                  │
│  Enter to select · ↑/↓ to navigate · ←/→ to reorder · Esc to close                               │
│                                                                                                  │
│  ┌────────────────────────────────────────────────────────────────────────────────────────────┐  │
│  │ Preview:                                                                                   │  │
│  │ workspace (/directory)        branch         sandbox        /model                quota    │  │
│  │ ~/project/path                main           docker         gemini-2.5-pro        42% used │  │
│  └────────────────────────────────────────────────────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<FooterConfigDialog /> > updates the preview when Show footer labels is toggled off 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Configure Footer                                                                                │
│                                                                                                  │
│  Select which items to display in the footer.                                                    │
│                                                                                                  │
│    [✓] workspace                                                                                 │
│     Current working directory                                                                    │
│    [✓] git-branch                                                                                │
│     Current git branch name (not shown when unavailable)                                         │
│    [✓] sandbox                                                                                   │
│     Sandbox type and trust indicator                                                             │
│    [✓] model-name                                                                                │
│     Current model identifier                                                                     │
│    [✓] quota                                                                                     │
│     Percentage of daily limit used (not shown when unavailable)                                  │
│    [ ] context-used                                                                              │
│     Percentage of context window used                                                            │
│    [ ] memory-usage                                                                              │
│     Memory used by the application                                                               │
│    [ ] session-id                                                                                │
│     Unique identifier for the current session                                                    │
│    [ ] hostname                                                                                  │
│     Current machine hostname                                                                     │
│    [ ] auth                                                                                      │
│     Current authentication info                                                                  │
│    [ ] code-changes                                                                              │
│     Lines added/removed in the session (not shown when zero)                                     │
│    [ ] token-count                                                                               │
│     Total tokens used in the session (not shown when zero)                                       │
│  > [ ] Show footer labels                                                                        │
│                                                                                                  │
│    Reset to default footer                                                                       │
│                                                                                                  │
│                                                                                                  │
│  Enter to select · ↑/↓ to navigate · ←/→ to reorder · Esc to close                               │
│                                                                                                  │
│  ┌────────────────────────────────────────────────────────────────────────────────────────────┐  │
│  │ Preview:                                                                                   │  │
│  │ ~/project/path     ·     main     ·     docker     ·     gemini-2.5-pro     ·     42% used │  │
│  └────────────────────────────────────────────────────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
